--- a/_includes/assets/sass/components/_leader-bar.scss
+++ b/_includes/assets/sass/components/_leader-bar.scss
@@ -1,17 +1,17 @@
 // Leader bar
 .leader-bar {
-	background-color: $white;
-	padding: govuk-px-to-rem(36px) govuk-px-to-rem(0px) govuk-px-to-rem(0px);
-	width: 100%;
+  background-color: $white;
+  padding: govuk-px-to-rem(36px) govuk-px-to-rem(0px);
+  width: 100%;
 
-	@media only screen and (min-width : $tablet) {
-		background-color: $red;
-		padding: govuk-px-to-rem(67px) govuk-px-to-rem(0px);
-	}
+  @media only screen and (min-width: $tablet) {
+    background-color: $red;
+    padding: govuk-px-to-rem(67px) govuk-px-to-rem(0px);
+  }
 
-	.leader-bar__text {
-		@media only screen and (min-width : $tablet) {
-			color: $white
-		}
-	}
+  .leader-bar__text {
+    @media only screen and (min-width: $tablet) {
+      color: $white;
+    }
+  }
 }
